Allow references relative to url-prefix
FossilOrigin-Name: 47f04da56ca18fb5bb2097507f5910775276dd48b6acbe55cea2579cd0084ecf

--- a/tests/result/content/link/20200215204700.html
+++ b/tests/result/content/link/20200215204700.html
@@ -3,4 +3,7 @@
 <a href="00000000000100">Config</a>
 <a href="00000000000100">00000000000100</a>
 <a href="#frag">Frag</a>
-<a href="#frag">#frag</a></p>
+<a href="#frag">#frag</a>
+<a href="/hosted">H</a>
+<a href="/based">B</a>
+<a href="../rel">R</a></p>
